force-app/main/default/objects/FinancialHistoryTransaction__x/FinancialHistoryTransaction__x.object-meta.xml
<CustomObject>
    <description>FinancialHistoryTransactions</description>
    <externalDataSource>MuleSoftOData</externalDataSource>
    <externalName>FinancialHistoryTransactions</externalName>
    <externalRepository>transactionNumber</externalRepository>
    <label>FinancialHistoryTransaction</label>
    <pluralLabel>FinancialHistoryTransactions</pluralLabel>
</CustomObject>