force-app/main/default/objects/FinancialHistoryTransaction__x/fields/agreementNumber__c.field-meta.xml
<CustomField>
    <fullName>agreementNumber__c</fullName>
    <description>agreementNumber</description>
    <externalDeveloperName>agreementNumber</externalDeveloperName>
    <label>AgreementNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>