force-app/main/default/objects/FinancialHistoryTransaction__x/fields/bankAcctNumber__c.field-meta.xml
<CustomField>
    <fullName>BankAcctNumber__c</fullName>
    <externalDeveloperName>bankAcctNumber</externalDeveloperName>
    <label>BankAcctNumber</label>
    <length>4</length>
    <type>Text</type>
</CustomField>