force-app/main/default/objects/FinancialHistoryTransaction__x/fields/bankName__c.field-meta.xml
<CustomField>
    <fullName>BankName__c</fullName>
    <externalDeveloperName>bankName</externalDeveloperName>
    <label>BankName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>