force-app/main/default/objects/FinancialHistoryTransaction__x/fields/dueDate__c.field-meta.xml
<CustomField>
    <fullName>dueDate__c</fullName>
    <description>dueDate</description>
    <externalDeveloperName>dueDate</externalDeveloperName>
    <label>DueDate</label>
    <type>Date</type>
</CustomField>