force-app/main/default/objects/FinancialHistoryTransaction__x/fields/effectiveDate__c.field-meta.xml
<CustomField>
    <fullName>effectiveDate__c</fullName>
    <description>effectiveDate</description>
    <externalDeveloperName>effectiveDate</externalDeveloperName>
    <label>EffectiveDate</label>
    <type>DateTime</type>
</CustomField>