force-app/main/default/objects/FinancialHistoryTransaction__x/fields/frequency__c.field-meta.xml
<CustomField>
    <fullName>frequency__c</fullName>
    <description>frequency</description>
    <externalDeveloperName>frequency</externalDeveloperName>
    <label>Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>