force-app/main/default/objects/FinancialHistoryTransaction__x/fields/interestDue__c.field-meta.xml
<CustomField>
    <fullName>interestDue__c</fullName>
    <description>interestDue</description>
    <externalDeveloperName>interestDue</externalDeveloperName>
    <label>InterestDue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>