force-app/main/default/objects/FinancialHistoryTransaction__x/fields/moneySourceCode__c.field-meta.xml
<CustomField>
    <fullName>moneySourceCode__c</fullName>
    <description>moneySourceCode</description>
    <externalDeveloperName>moneySourceCode</externalDeveloperName>
    <label>MoneySourceCode</label>
    <length>15</length>
    <type>Text</type>
</CustomField>