force-app/main/default/objects/FinancialHistoryTransaction__x/fields/paidBy__c.field-meta.xml
<CustomField>
    <fullName>paidBy__c</fullName>
    <description>paidBy</description>
    <externalDeveloperName>paidBy</externalDeveloperName>
    <label>PaidBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>