force-app/main/default/objects/FinancialHistoryTransaction__x/fields/paymentByABR__c.field-meta.xml
<CustomField>
    <fullName>paymentByABR__c</fullName>
    <description>paymentByABR</description>
    <externalDeveloperName>paymentByABR</externalDeveloperName>
    <label>PaymentByABR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>