force-app/main/default/objects/FinancialHistoryTransaction__x/fields/paymentByCash__c.field-meta.xml
<CustomField>
    <fullName>paymentByCash__c</fullName>
    <description>paymentByCash</description>
    <externalDeveloperName>paymentByCash</externalDeveloperName>
    <label>PaymentByCash</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>