force-app/main/default/objects/FinancialHistoryTransaction__x/fields/paymentByDivd__c.field-meta.xml
<CustomField>
    <fullName>PaymentByDivd__c</fullName>
    <externalDeveloperName>paymentByDivd</externalDeveloperName>
    <label>PaymentByDivd</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>