force-app/main/default/objects/FinancialHistoryTransaction__x/fields/paymentByLoan__c.field-meta.xml
<CustomField>
    <fullName>PaymentByLoan__c</fullName>
    <externalDeveloperName>paymentByLoan</externalDeveloperName>
    <label>PaymentByLoan</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>