force-app/main/default/objects/FinancialHistoryTransaction__x/fields/premiumDue__c.field-meta.xml
<CustomField>
    <fullName>premiumDue__c</fullName>
    <description>premiumDue</description>
    <externalDeveloperName>premiumDue</externalDeveloperName>
    <label>PremiumDue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>