force-app/main/default/objects/FinancialHistoryTransaction__x/fields/processedDate__c.field-meta.xml
<CustomField>
    <fullName>ProcessedDate__c</fullName>
    <externalDeveloperName>processedDate</externalDeveloperName>
    <label>ProcessedDate</label>
    <type>DateTime</type>
</CustomField>