force-app/main/default/objects/FinancialHistoryTransaction__x/fields/submissionDate__c.field-meta.xml
<CustomField>
    <fullName>submissionDate__c</fullName>
    <description>submissionDate</description>
    <externalDeveloperName>submissionDate</externalDeveloperName>
    <label>SubmissionDate</label>
    <type>DateTime</type>
</CustomField>