force-app/main/default/objects/FinancialHistoryTransaction__x/fields/totalPayment__c.field-meta.xml
<CustomField>
    <fullName>TotalPayment__c</fullName>
    <externalDeveloperName>totalPayment</externalDeveloperName>
    <label>TotalPayment</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>