force-app/main/default/objects/FinancialHistoryTransaction__x/fields/transactionCode__c.field-meta.xml
<CustomField>
    <fullName>transactionCode__c</fullName>
    <description>transactionCode</description>
    <externalDeveloperName>transactionCode</externalDeveloperName>
    <label>TransactionCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>