force-app/main/default/objects/FinancialHistoryTransaction__x/fields/transactionDescription__c.field-meta.xml
<CustomField>
    <fullName>transactionDescription__c</fullName>
    <description>transactionDescription</description>
    <externalDeveloperName>transactionDescription</externalDeveloperName>
    <label>TransactionDescription</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>