force-app/main/default/objects/FinancialHistoryTransaction__x/fields/transactionNumber__c.field-meta.xml
<CustomField>
    <fullName>transactionNumber__c</fullName>
    <description>transactionNumber</description>
    <externalDeveloperName>transactionNumber</externalDeveloperName>
    <label>TransactionNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>