force-app/main/default/objects/FinancialHistoryTransaction__x/fields/transactionType__c.field-meta.xml
<CustomField>
    <fullName>transactionType__c</fullName>
    <description>transactionType</description>
    <externalDeveloperName>transactionType</externalDeveloperName>
    <label>TransactionType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>