force-app/main/default/objects/FinancialHistoryTransaction__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId</columns>
    <columns>agreementNumber__c</columns>
    <columns>transactionNumber__c</columns>
    <columns>transactionType__c</columns>
    <columns>totalPayment__c</columns>
    <columns>processedDate__c</columns>
    <columns>bankName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>